--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
   <div id="carrousel">
     <!-- <button id="left" onclick="move(-1)">&lt;</button> -->
-    <button id="left">&lt;</button>
+    <button id="left">&#8592;</button>
     <div id="conteneur">
       <div id="images">
       </div>
     </div>
     <!-- <button id="right" onclick="move(1)">&gt;</button> -->
-    <button id="right">&gt;</button>
+    <button id="right">&#8594;</button>
   </div>
   <script src="js/carrousel.js" type="text/javascript"></script>
 </body>
